--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -793,7 +793,7 @@ html, body {
     .content-container {
         grid-template-columns: 1fr;
         padding: 2rem;
-        margin-top: 60px;
+        margin-top: 180px;
     }
 
     .left-container {
@@ -1605,7 +1605,7 @@ html, body {
     }
 
     .inner-container {
-        padding: 90px 0px 50px 0px;
+        padding: 100px 0px 60px 0px;
     }
 
     .logo-container {
